# FsNotify

./: .gitmodules  CMakeLists.txt  ConfFile.cpp  ConfFile.h  DirNotify.cpp  FilesysNotify.h  FsNotify.cpp  LICENSE  README.md  calcsha.sh  dirnotify.cfg  fsnotify.cfg  test.sh
.github/workflows/: codacy.yml  codeql.yml
